configs/k3l/top-members/services.yaml
# top-members — Services (both namespaces)
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: staging
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: staging
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
  - port: 4000
    protocol: TCP
    targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: staging
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: top-members
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: top-members
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
  - port: 4000
    protocol: TCP
    targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: top-members
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
